adding kenya-specific analysis notebooks, updated cleaning and preprocessing notebooks to be more flexible, adding numerical analysis notebook

--- a/rachel/rzi_kenya_nlp_cleaning.ipynb
+++ b/rachel/rzi_kenya_nlp_cleaning.ipynb
@@ -6,9 +6,9 @@
     "id": "R-9EHCqvRv9Z"
    },
    "source": [
-    "# Cleaning\n",
+    "# Cleaning: Kenya Focus\n",
     "\n",
-    "This notebook creates a five-column dataframe with no null values for NLP pre-processing for the KivaMaxApprover project"
+    "This notebook creates a five-column dataframe with no null values for NLP pre-processing for the KivaMaxApprover project with a focus on Kenya "
    ]
   },
   {
@@ -25,19 +25,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# set input and output filenames\n",
     "\n",
-    "filename = ('./data/kivamix.csv')\n",
-    "op_filename = ('./data/cleaned_nlp.csv')"
+    "filename = ('data/kivamix.csv')\n",
+    "op_filename = ('data/kenya_cleaned_nlp.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "id": "DIF5JQ-XHqxC"
    },
@@ -272,21 +272,59 @@
        "[5 rows x 35 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#read in csv\n",
     "kiva_large = pd.read_csv(filename)\n",
-    "\n",
     "kiva_large.head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PH    88691\n",
+       "KE    51170\n",
+       "SV    21840\n",
+       "KH    19196\n",
+       "CO    18590\n",
+       "      ...  \n",
+       "IQ        4\n",
+       "VC        3\n",
+       "BD        1\n",
+       "AF        1\n",
+       "BJ        1\n",
+       "Name: COUNTRY_CODE, Length: 83, dtype: int64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kiva_large['COUNTRY_CODE'].value_counts().sort_values(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kiva_kenya = kiva_large[kiva_large['COUNTRY_CODE'] == 'KE']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -343,72 +381,84 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1455352</th>\n",
-       "      <td>The city of Portoviejo is located in the valle...</td>\n",
-       "      <td>to purchase natural products.</td>\n",
-       "      <td>#Repeat Borrower, #Health and Sanitation</td>\n",
+       "      <th>1799331</th>\n",
+       "      <td>Dinnah is 43 years of age and a proud mother o...</td>\n",
+       "      <td>to buy farm inputs such as seeds and fertilize...</td>\n",
+       "      <td>#Parent</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1727469</th>\n",
-       "      <td>Lorna is a married woman, 39 years old with fi...</td>\n",
-       "      <td>to purchase additional stocks of Avon, Natasha...</td>\n",
-       "      <td>#Woman-Owned Business, #Parent</td>\n",
+       "      <th>1294719</th>\n",
+       "      <td>Resy is a married woman and has been blessed w...</td>\n",
+       "      <td>to purchase chicks and poultry feed.</td>\n",
+       "      <td>#Animals, #Woman-Owned Business, volunteer_pic...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1595847</th>\n",
+       "      <td>Lavenda is happily married and has been blesse...</td>\n",
+       "      <td>to add stock of beauty products to her salon</td>\n",
+       "      <td>user_favorite, #Parent, #Woman-Owned Business</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1747998</th>\n",
-       "      <td>Anita is a 32-year-old married woman residing ...</td>\n",
-       "      <td>to purchase lentils, oil, salt, etc. in bulk i...</td>\n",
-       "      <td>#Woman-Owned Business</td>\n",
+       "      <th>1139606</th>\n",
+       "      <td>Hadija is a Kiva borrower. She describes herse...</td>\n",
+       "      <td>to buy more stock of vegetables, flour, sugar,...</td>\n",
+       "      <td>#Repeat Borrower, #Woman-Owned Business</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1342372</th>\n",
-       "      <td>Saeeda is a 45-year-old woman, living with her...</td>\n",
-       "      <td>to buy embroidery raw materials such as thread...</td>\n",
-       "      <td>#Fabrics, #Woman-Owned Business, user_favorite...</td>\n",
+       "      <th>1813411</th>\n",
+       "      <td>Purity, aged 28, is a lovely mother of two chi...</td>\n",
+       "      <td>to purchase high-quality seeds and nutrient-ri...</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1632606</th>\n",
-       "      <td>Pablo is an enterprising young man who has the...</td>\n",
-       "      <td>to buy a POS (point of sale) terminal that wil...</td>\n",
-       "      <td>#Single, #Technology, #Biz Durable Asset</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                    DESCRIPTION_TRANSLATED  ... STATUS\n",
-       "LOAN_ID                                                     ...       \n",
-       "1455352  The city of Portoviejo is located in the valle...  ...      1\n",
-       "1727469  Lorna is a married woman, 39 years old with fi...  ...      0\n",
-       "1747998  Anita is a 32-year-old married woman residing ...  ...      1\n",
-       "1342372  Saeeda is a 45-year-old woman, living with her...  ...      1\n",
-       "1632606  Pablo is an enterprising young man who has the...  ...      0\n",
+       "                                    DESCRIPTION_TRANSLATED  \\\n",
+       "LOAN_ID                                                      \n",
+       "1799331  Dinnah is 43 years of age and a proud mother o...   \n",
+       "1294719  Resy is a married woman and has been blessed w...   \n",
+       "1595847  Lavenda is happily married and has been blesse...   \n",
+       "1139606  Hadija is a Kiva borrower. She describes herse...   \n",
+       "1813411  Purity, aged 28, is a lovely mother of two chi...   \n",
        "\n",
-       "[5 rows x 4 columns]"
+       "                                                  LOAN_USE  \\\n",
+       "LOAN_ID                                                      \n",
+       "1799331  to buy farm inputs such as seeds and fertilize...   \n",
+       "1294719               to purchase chicks and poultry feed.   \n",
+       "1595847       to add stock of beauty products to her salon   \n",
+       "1139606  to buy more stock of vegetables, flour, sugar,...   \n",
+       "1813411  to purchase high-quality seeds and nutrient-ri...   \n",
+       "\n",
+       "                                                      TAGS  STATUS  \n",
+       "LOAN_ID                                                             \n",
+       "1799331                                            #Parent       1  \n",
+       "1294719  #Animals, #Woman-Owned Business, volunteer_pic...       1  \n",
+       "1595847      user_favorite, #Parent, #Woman-Owned Business       0  \n",
+       "1139606            #Repeat Borrower, #Woman-Owned Business       1  \n",
+       "1813411                                                NaN       1  "
       ]
      },
-     "execution_count": 3,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 6,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#create a dataframe with only columns relevant to NLP and set index = LOAN_ID\n",
-    "kiva = kiva_large[['LOAN_ID', 'DESCRIPTION_TRANSLATED','LOAN_USE','TAGS', 'STATUS']].set_index('LOAN_ID', drop=True)\n",
+    "kiva = kiva_kenya[['LOAN_ID', 'DESCRIPTION_TRANSLATED','LOAN_USE','TAGS', 'STATUS']].set_index('LOAN_ID', drop=True)\n",
     "kiva.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -431,17 +481,15 @@
     {
      "data": {
       "text/plain": [
-       "DESCRIPTION_TRANSLATED     3253\n",
-       "LOAN_USE                   3246\n",
-       "TAGS                      71842\n",
-       "STATUS                        0\n",
+       "DESCRIPTION_TRANSLATED    1145\n",
+       "LOAN_USE                  1145\n",
+       "TAGS                      8013\n",
+       "STATUS                       0\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 4,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 7,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -451,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -474,13 +522,11 @@
     {
      "data": {
       "text/plain": [
-       "(419156, 4)"
+       "(51170, 4)"
       ]
      },
-     "execution_count": 5,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 8,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -490,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -513,13 +559,11 @@
     {
      "data": {
       "text/plain": [
-       "(418635, 4)"
+       "(51019, 4)"
       ]
      },
-     "execution_count": 6,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 9,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -533,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -556,13 +600,11 @@
     {
      "data": {
       "text/plain": [
-       "1095"
+       "330"
       ]
      },
-     "execution_count": 7,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 10,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -573,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -596,13 +638,11 @@
     {
      "data": {
       "text/plain": [
-       "(417540, 4)"
+       "(50689, 4)"
       ]
      },
-     "execution_count": 8,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 11,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -614,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -644,10 +684,8 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 12,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -659,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "id": "M8peAwgeZraW"
    },
@@ -672,17 +710,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {
     "id": "F3FTuQCbMp94"
    },
    "outputs": [],
    "source": [
+    "#save kenya-only csv\n",
     "\n",
-    "\n",
-    "#local machine\n",
     "kiva.to_csv(op_filename)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
