--- a/rachel/rzi_preprocessing.ipynb
+++ b/rachel/rzi_preprocessing.ipynb
@@ -36,21 +36,30 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "id": "-E_uyEKWPhzH"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# #read in data on colab\n",
-    "# kiva = pd.read_csv('/content/drive/MyDrive/Colab/group_project/cleaned_nlp.csv')\n",
+    "#establish input & output filenames\n",
     "\n",
-    "#read in data on drive\n",
-    "kiva = pd.read_csv('data/cleaned_nlp.csv')"
+    "filename = ('data/kenya_cleaned_nlp.csv')\n",
+    "op_filename = ('data/kenya_pre_processed_nlp.csv')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {
+    "id": "-E_uyEKWPhzH"
+   },
+   "outputs": [],
+   "source": [
+    "# read in data \n",
+    "kiva = pd.read_csv(filename)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -102,43 +111,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1455352</td>\n",
-       "      <td>The city of Portoviejo is located in the valle...</td>\n",
-       "      <td>to purchase natural products.</td>\n",
-       "      <td>#Repeat Borrower, #Health and Sanitation</td>\n",
+       "      <td>1799331</td>\n",
+       "      <td>Dinnah is 43 years of age and a proud mother o...</td>\n",
+       "      <td>to buy farm inputs such as seeds and fertilize...</td>\n",
+       "      <td>#Parent</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1727469</td>\n",
-       "      <td>Lorna is a married woman, 39 years old with fi...</td>\n",
-       "      <td>to purchase additional stocks of Avon, Natasha...</td>\n",
-       "      <td>#Woman-Owned Business, #Parent</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1747998</td>\n",
-       "      <td>Anita is a 32-year-old married woman residing ...</td>\n",
-       "      <td>to purchase lentils, oil, salt, etc. in bulk i...</td>\n",
-       "      <td>#Woman-Owned Business</td>\n",
+       "      <td>1294719</td>\n",
+       "      <td>Resy is a married woman and has been blessed w...</td>\n",
+       "      <td>to purchase chicks and poultry feed.</td>\n",
+       "      <td>#Animals, #Woman-Owned Business, volunteer_pic...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1595847</td>\n",
+       "      <td>Lavenda is happily married and has been blesse...</td>\n",
+       "      <td>to add stock of beauty products to her salon</td>\n",
+       "      <td>user_favorite, #Parent, #Woman-Owned Business</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1342372</td>\n",
-       "      <td>Saeeda is a 45-year-old woman, living with her...</td>\n",
-       "      <td>to buy embroidery raw materials such as thread...</td>\n",
-       "      <td>#Fabrics, #Woman-Owned Business, user_favorite...</td>\n",
+       "      <td>1139606</td>\n",
+       "      <td>Hadija is a Kiva borrower. She describes herse...</td>\n",
+       "      <td>to buy more stock of vegetables, flour, sugar,...</td>\n",
+       "      <td>#Repeat Borrower, #Woman-Owned Business</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1632606</td>\n",
-       "      <td>Pablo is an enterprising young man who has the...</td>\n",
-       "      <td>to buy a POS (point of sale) terminal that wil...</td>\n",
-       "      <td>#Single, #Technology, #Biz Durable Asset</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1813411</td>\n",
+       "      <td>Purity, aged 28, is a lovely mother of two chi...</td>\n",
+       "      <td>to purchase high-quality seeds and nutrient-ri...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -146,28 +155,28 @@
       ],
       "text/plain": [
        "   LOAN_ID                             DESCRIPTION_TRANSLATED  \\\n",
-       "0  1455352  The city of Portoviejo is located in the valle...   \n",
-       "1  1727469  Lorna is a married woman, 39 years old with fi...   \n",
-       "2  1747998  Anita is a 32-year-old married woman residing ...   \n",
-       "3  1342372  Saeeda is a 45-year-old woman, living with her...   \n",
-       "4  1632606  Pablo is an enterprising young man who has the...   \n",
+       "0  1799331  Dinnah is 43 years of age and a proud mother o...   \n",
+       "1  1294719  Resy is a married woman and has been blessed w...   \n",
+       "2  1595847  Lavenda is happily married and has been blesse...   \n",
+       "3  1139606  Hadija is a Kiva borrower. She describes herse...   \n",
+       "4  1813411  Purity, aged 28, is a lovely mother of two chi...   \n",
        "\n",
        "                                            LOAN_USE  \\\n",
-       "0                      to purchase natural products.   \n",
-       "1  to purchase additional stocks of Avon, Natasha...   \n",
-       "2  to purchase lentils, oil, salt, etc. in bulk i...   \n",
-       "3  to buy embroidery raw materials such as thread...   \n",
-       "4  to buy a POS (point of sale) terminal that wil...   \n",
+       "0  to buy farm inputs such as seeds and fertilize...   \n",
+       "1               to purchase chicks and poultry feed.   \n",
+       "2       to add stock of beauty products to her salon   \n",
+       "3  to buy more stock of vegetables, flour, sugar,...   \n",
+       "4  to purchase high-quality seeds and nutrient-ri...   \n",
        "\n",
        "                                                TAGS  STATUS  \n",
-       "0           #Repeat Borrower, #Health and Sanitation       1  \n",
-       "1                     #Woman-Owned Business, #Parent       0  \n",
-       "2                              #Woman-Owned Business       1  \n",
-       "3  #Fabrics, #Woman-Owned Business, user_favorite...       1  \n",
-       "4           #Single, #Technology, #Biz Durable Asset       0  "
+       "0                                            #Parent       1  \n",
+       "1  #Animals, #Woman-Owned Business, volunteer_pic...       1  \n",
+       "2      user_favorite, #Parent, #Woman-Owned Business       0  \n",
+       "3            #Repeat Borrower, #Woman-Owned Business       1  \n",
+       "4                                                NaN       1  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "id": "37WHQUz6daUU"
    },
@@ -210,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "id": "BaYkB4f5iZSI"
    },
@@ -231,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "id": "wZAzNu6Aiyuk"
    },
@@ -242,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "id": "MZDsv3OSi-OU"
    },
@@ -263,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "id": "xY6rqnzejtaB"
    },
@@ -278,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "id": "MLBAKIdSkDKP"
    },
@@ -290,110 +299,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['city',\n",
-       " 'portoviejo',\n",
-       " 'located',\n",
-       " 'valley',\n",
-       " 'portoviejo',\n",
-       " 'river',\n",
-       " 'known',\n",
-       " 'city',\n",
-       " 'royal',\n",
-       " 'tamarinds',\n",
-       " 'affected',\n",
-       " 'earthquake',\n",
-       " 'april',\n",
-       " '16',\n",
-       " '2016',\n",
-       " 'city',\n",
-       " 'rich',\n",
-       " 'production',\n",
+       "['dinnah',\n",
+       " '43',\n",
+       " 'years',\n",
+       " 'age',\n",
+       " 'proud',\n",
+       " 'mother',\n",
+       " '5',\n",
+       " '4',\n",
+       " 'schoolgoing',\n",
+       " 'active',\n",
+       " 'woman',\n",
+       " 'works',\n",
+       " 'agriculture',\n",
+       " 'skill',\n",
+       " 'inherited',\n",
+       " 'parents',\n",
+       " 'br',\n",
+       " 'br',\n",
+       " 'addition',\n",
+       " 'engaging',\n",
+       " 'small',\n",
+       " 'business',\n",
+       " 'activities',\n",
+       " 'dinnah',\n",
+       " 'hardworking',\n",
+       " 'mixed',\n",
+       " 'farmer',\n",
+       " 'past',\n",
+       " 'years',\n",
+       " 'growing',\n",
        " 'vegetables',\n",
-       " 'legumes',\n",
-       " 'tropical',\n",
-       " 'fruits',\n",
-       " 'local',\n",
-       " 'consumptionbr',\n",
-       " 'br',\n",
-       " 'raisa',\n",
-       " '25',\n",
-       " 'years',\n",
-       " 'old',\n",
-       " 'commonlaw',\n",
-       " 'relationship',\n",
-       " 'fouryearold',\n",
-       " 'child',\n",
-       " 'school',\n",
-       " 'partner',\n",
-       " 'locksmith',\n",
-       " 'live',\n",
-       " 'family',\n",
-       " 'home',\n",
+       " 'maize',\n",
+       " 'keeping',\n",
+       " 'dairy',\n",
+       " 'cows',\n",
+       " 'activities',\n",
+       " 'able',\n",
+       " 'earn',\n",
+       " 'decent',\n",
+       " 'honest',\n",
+       " 'income',\n",
        " 'br',\n",
        " 'br',\n",
-       " 'raisa',\n",
-       " 'works',\n",
-       " 'selling',\n",
-       " 'natures',\n",
-       " 'garden',\n",
-       " 'natural',\n",
-       " 'products',\n",
-       " 'natural',\n",
-       " 'health',\n",
-       " 'beauty',\n",
-       " 'products',\n",
-       " 'father',\n",
-       " 'goes',\n",
-       " 'make',\n",
-       " 'sales',\n",
-       " 'saturdays',\n",
-       " 'sundays',\n",
-       " 'lowincome',\n",
-       " 'neighborhoods',\n",
-       " 'offering',\n",
-       " 'products',\n",
-       " 'credit',\n",
-       " 'collecting',\n",
-       " 'payments',\n",
-       " 'week',\n",
-       " 'customers',\n",
-       " 'buses',\n",
-       " 'carrying',\n",
-       " 'merchandise',\n",
+       " 'dinnah',\n",
+       " 'making',\n",
+       " 'profits',\n",
+       " 'farming',\n",
+       " 'easy',\n",
+       " 'humble',\n",
+       " 'industrious',\n",
+       " 'mother',\n",
+       " 'farm',\n",
+       " 'producing',\n",
+       " 'harvest',\n",
+       " 'lately',\n",
+       " 'lack',\n",
+       " 'fertilizer',\n",
+       " 'good',\n",
+       " 'seeds',\n",
+       " 'presence',\n",
+       " 'pests',\n",
+       " 'diseases',\n",
        " 'br',\n",
        " 'br',\n",
-       " 'business',\n",
-       " 'years',\n",
-       " 'works',\n",
-       " 'monday',\n",
-       " 'friday',\n",
-       " 'private',\n",
-       " 'business',\n",
-       " 'new',\n",
+       " 'seeking',\n",
        " 'loan',\n",
        " 'buy',\n",
-       " 'natural',\n",
-       " 'products',\n",
+       " 'farm',\n",
+       " 'inputs',\n",
+       " 'fertilizers',\n",
+       " 'seeds',\n",
+       " 'expand',\n",
+       " 'crop',\n",
+       " 'farm',\n",
        " 'br',\n",
        " 'br',\n",
-       " 'likes',\n",
-       " 'loans',\n",
-       " 'rates',\n",
-       " 'low',\n",
-       " 'dream',\n",
-       " 'vehicle',\n",
-       " 'order',\n",
-       " 'new',\n",
-       " 'places']"
+       " 'loan',\n",
+       " 'dinnah',\n",
+       " 'assured',\n",
+       " 'bumper',\n",
+       " 'harvest',\n",
+       " 'mean',\n",
+       " 'profits',\n",
+       " 'income',\n",
+       " 'using',\n",
+       " 'loan',\n",
+       " 'able',\n",
+       " 'expand',\n",
+       " 'enterprise',\n",
+       " 'br',\n",
+       " 'br',\n",
+       " 'dinnah',\n",
+       " 'hopes',\n",
+       " 'consider',\n",
+       " 'appeal',\n",
+       " 'loan',\n",
+       " 'mean',\n",
+       " 'lot',\n",
+       " 'family']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -438,43 +451,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1455352</td>\n",
-       "      <td>[city, portoviejo, located, valley, portoviejo...</td>\n",
-       "      <td>[purchase, natural, products]</td>\n",
-       "      <td>[repeat, borrower, health, and, sanitation]</td>\n",
+       "      <td>1799331</td>\n",
+       "      <td>[dinnah, 43, years, age, proud, mother, 5, 4, ...</td>\n",
+       "      <td>[buy, farm, inputs, seeds, fertilizer, expand,...</td>\n",
+       "      <td>[parent]</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1727469</td>\n",
-       "      <td>[lorna, married, woman, 39, years, old, childr...</td>\n",
-       "      <td>[purchase, additional, stocks, avon, natasha, ...</td>\n",
-       "      <td>[womanowned, business, parent]</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1747998</td>\n",
-       "      <td>[anita, 32yearold, married, woman, residing, j...</td>\n",
-       "      <td>[purchase, lentils, oil, salt, bulk, order, ex...</td>\n",
-       "      <td>[womanowned, business]</td>\n",
+       "      <td>1294719</td>\n",
+       "      <td>[resy, married, woman, blessed, kids, attend, ...</td>\n",
+       "      <td>[purchase, chicks, poultry, feed]</td>\n",
+       "      <td>[animals, womanowned, business, volunteer_pick...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1595847</td>\n",
+       "      <td>[lavenda, happily, married, blessed, children,...</td>\n",
+       "      <td>[add, stock, beauty, products, salon]</td>\n",
+       "      <td>[user_favorite, parent, womanowned, business]</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1342372</td>\n",
-       "      <td>[saeeda, 45yearold, woman, living, spouse, are...</td>\n",
-       "      <td>[buy, embroidery, raw, materials, thread, fanc...</td>\n",
-       "      <td>[fabrics, womanowned, business, user_favorite,...</td>\n",
+       "      <td>1139606</td>\n",
+       "      <td>[hadija, kiva, borrower, describes, honest, op...</td>\n",
+       "      <td>[buy, stock, vegetables, flour, sugar, soap, i...</td>\n",
+       "      <td>[repeat, borrower, womanowned, business]</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1632606</td>\n",
-       "      <td>[pablo, enterprising, young, man, drive, forwa...</td>\n",
-       "      <td>[buy, pos, point, sale, terminal, make, transa...</td>\n",
-       "      <td>[single, technology, biz, durable, asset]</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1813411</td>\n",
+       "      <td>[purity, aged, 28, lovely, mother, children, c...</td>\n",
+       "      <td>[purchase, highquality, seeds, nutrientrich, f...</td>\n",
+       "      <td>[nan]</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -482,28 +495,28 @@
       ],
       "text/plain": [
        "   LOAN_ID                             DESCRIPTION_TRANSLATED  \\\n",
-       "0  1455352  [city, portoviejo, located, valley, portoviejo...   \n",
-       "1  1727469  [lorna, married, woman, 39, years, old, childr...   \n",
-       "2  1747998  [anita, 32yearold, married, woman, residing, j...   \n",
-       "3  1342372  [saeeda, 45yearold, woman, living, spouse, are...   \n",
-       "4  1632606  [pablo, enterprising, young, man, drive, forwa...   \n",
+       "0  1799331  [dinnah, 43, years, age, proud, mother, 5, 4, ...   \n",
+       "1  1294719  [resy, married, woman, blessed, kids, attend, ...   \n",
+       "2  1595847  [lavenda, happily, married, blessed, children,...   \n",
+       "3  1139606  [hadija, kiva, borrower, describes, honest, op...   \n",
+       "4  1813411  [purity, aged, 28, lovely, mother, children, c...   \n",
        "\n",
        "                                            LOAN_USE  \\\n",
-       "0                      [purchase, natural, products]   \n",
-       "1  [purchase, additional, stocks, avon, natasha, ...   \n",
-       "2  [purchase, lentils, oil, salt, bulk, order, ex...   \n",
-       "3  [buy, embroidery, raw, materials, thread, fanc...   \n",
-       "4  [buy, pos, point, sale, terminal, make, transa...   \n",
+       "0  [buy, farm, inputs, seeds, fertilizer, expand,...   \n",
+       "1                  [purchase, chicks, poultry, feed]   \n",
+       "2              [add, stock, beauty, products, salon]   \n",
+       "3  [buy, stock, vegetables, flour, sugar, soap, i...   \n",
+       "4  [purchase, highquality, seeds, nutrientrich, f...   \n",
        "\n",
        "                                                TAGS  STATUS  \n",
-       "0        [repeat, borrower, health, and, sanitation]       1  \n",
-       "1                     [womanowned, business, parent]       0  \n",
-       "2                             [womanowned, business]       1  \n",
-       "3  [fabrics, womanowned, business, user_favorite,...       1  \n",
-       "4          [single, technology, biz, durable, asset]       0  "
+       "0                                           [parent]       1  \n",
+       "1  [animals, womanowned, business, volunteer_pick...       1  \n",
+       "2      [user_favorite, parent, womanowned, business]       0  \n",
+       "3           [repeat, borrower, womanowned, business]       1  \n",
+       "4                                              [nan]       1  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,8 +526,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Save File"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -536,19 +556,14 @@
    },
    "outputs": [],
    "source": [
-    "# # save the entire dataset\n",
-    "# kiva.to_csv('/content/drive/MyDrive/Colab/group_project/pre_processed_kiva.csv')\n",
-    "\n",
-    "#save data on local machine\n",
-    "kiva.to_csv('data/pre_processed_nlp.csv')"
+    "#save data \n",
+    "kiva.to_csv(op_filename)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "3YDrnvuBkX7a"
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
