--- a/Shashank/sr3_kiva_eda.ipynb
+++ b/Shashank/sr3_kiva_eda.ipynb
@@ -635,9 +635,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8582266666666667 0.85679\n"
+     ]
+    }
+   ],
    "source": [
     "#Building out logistic regressoin with higher max-iter\n",
     "logreg = LogisticRegression(solver='liblinear', max_iter=1200)\n",
@@ -1173,7 +1181,9 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1412,7 +1422,9 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1676,19 +1688,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8462196078431372 0.8387764705882353\n"
+      "0.9372966666666667 0.88232\n"
      ]
     }
    ],
    "source": [
-    "rf = RandomForestClassifier(n_estimators = 400, max_depth=20, min_samples_leaf=3, bootstrap=True)\n",
+    "rf = RandomForestClassifier(n_estimators = 500, max_depth=30, min_samples_leaf=2, bootstrap=True)\n",
     "rf.fit(X_train_sc,y_train)\n",
     "print(rf.score(X_train_sc, y_train), rf.score(X_test_sc, y_test))"
    ]
@@ -1742,17 +1754,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Set up a pipeline with cvec vectorizer and Random Forest\n",
+    "pipe_gbc = Pipeline([\n",
+    "    ('gb', GradientBoostingClassifier())\n",
+    "])"
+   ]
   },
   {
    "cell_type": "code",
@@ -1760,10 +1770,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gb = GradientBoostingClassifier(n_estimators=300)\n",
-    "gb.fit(X_train, y_train)\n",
+    "# params and grid search \n",
+    "gbc_params = {\n",
+    "    'gb__n_estimators': [25, 50, 100],\n",
+    "    'gb__max_depth' : [3,4,5],\n",
+    "    'gb__learning_rate': [0.05, 0.1]\n",
+    "}\n",
+    "\n",
+    "gs_gbc = GridSearchCV(pipe_gbc, param_grid = gbc_params, cv=5)\n",
+    "gs_gbc.fit(X_train_sc, y_train)\n",
+    "print(f' Best Score from Grid Search is {gs_gbc.best_score_}')\n",
+    "gs_gbc.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#get predictions \n",
+    "preds_gb = gs_gbc.predict(X_test)\n",
+    "\n",
+    "#plot confusion matrix\n",
+    "cm = confusion_matrix(y_test, preds_gb)\n",
+    "ConfusionMatrixDisplay(cm).plot();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gb = GradientBoostingClassifier(n_estimators=300, learning_rate )\n",
+    "gb.fit(X_train_sc, y_train_sc)\n",
     "print(gb.score(X_train, y_train), gb.score(X_test, y_test),  \n",
-    "      cross_val_score(gb, X_train, y_train, cv = 5).mean())"
+    "      cross_val_score(gb, X_train_sc, y_train_sc, cv = 5).mean())"
    ]
   },
   {
