--- a/Precious/kenya_nlp_tag_and_text_models.ipynb
+++ b/Precious/kenya_nlp_tag_and_text_models.ipynb
@@ -2497,7 +2497,9 @@
     "\\\n",
     "Unfortunately, the model does not perform as well for expired loans. Only 68% of our predictions for expired loans were correct, and out of all the loans that were expired, we only predicted 32% of those correctly. Our weighted average for expired loans, or f1-score is .44. \\\n",
     "\\\n",
-    "Since we are more interested in finding words that improve the chances of a loan being funded, I created a dataframe showing how each word impacts the prediction. "
+    "Since we are more interested in finding words that improve the chances of a loan being funded, I created a dataframe showing how each word impacts the prediction. From the dataframe, we can see that smaller loans are more likely to be funded, specifically loan with kes 20,000 (with kes meaning Kenyan Shillings) and kes 30,000 in the description are more likely to be funded than any other amount, and requests for kes 60,000 or more negatively impact your chances of funding. Also, women borrowers are more likely to receive full funding than men. Specifically the following word combinations have a positive impact on funding: single parent, single mother/mom, widow, group farmer and the user_favorite tag. Some word combinations that negatively impact funding are mentioning man, married man or father. Mentioning motorcycle or shop also negatively impact the likelihood of funding. Something else to take note of is that parent by itself negatively impacts funding but single parent has the 6th highest positive impact score. \\\n",
+    "\\\n",
+    "Looking at the coefficient scores for the feature names in our data, it may be useful to also stem the words while preprocessing so that all forms of similar words are counted as one word, such as mom and mother being counted as one word in our vectorizer instead of being counted separately."
    ]
   },
   {
@@ -2513,7 +2515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -2670,7 +2672,7 @@
        "19328  1.925584                        water"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
